changes in dev branch

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
- <h3> <a href="/welcome">Click Here </a> </h3>
+ <h3> <a href="/welcome">Click Here to continue </a> </h3>
 
 </body>
 </html>
